Fixing group purchase and order creation